objects/BMCServiceDesk__BMC_SystemService__c.object
<CustomObject>
    <description>Abstract class that contains the information necessary to represent, configure, and manage the functionality provided by a device or software feature. A service is a general-purpose object to configure and manage the implementation of functionality. For example, IT administrators can use both the SystemClassId and SystemName attributes to specifically configure a service to only systems assigned a specific name and identification number. When the attribute is defined, it is automatically propagated to the related configuration item (CI). Note: a system service is different from a business service, which is considered a logical entity. By definition, abstract classes cannot hold any instances. You use them only in special cases to organize subclasses so that you have the flexibility to add a layer of organization without a database join. Therefore, you might use the only subclass, BMC_ApplicationService, to store information about configuring and managing software features.</description>
    <fields>
        <fullName>BMCServiceDesk__InstanceID__c</fullName>
        <label>Instance ID</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__System_Class_Id__c</fullName>
        <label>System Class ID</label>
        <length>38</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__System_Name__c</fullName>
        <label>System Name</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <label>System Service</label>
    <nameField>
        <label>System Service Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>System Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>